--- a/src/LCTFCommander/MainWindow.xaml
+++ b/src/LCTFCommander/MainWindow.xaml
@@ -158,20 +158,20 @@
 										Increment="{Binding ElementName=WavelengthSlider, Path=SmallChange}"
 										Minimum="{Binding WavelengthMin}"
 										Maximum="{Binding WavelengthMax}"
-										Value="{Binding OrderedSequenceStart}"/>
+										Value="{Binding OrderedSequenceStart}" KeyDown="TextBox_KeyDown"/>
 									<tk:IntegerUpDown Grid.Row="1" Grid.Column="1" Width="75" VerticalAlignment="Center"
 										Increment="{Binding ElementName=WavelengthSlider, Path=SmallChange}"
 										Minimum="{Binding WavelengthMin}"
 										Maximum="{Binding WavelengthMax}"
-										Value="{Binding OrderedSequenceStop, UpdateSourceTrigger=LostFocus}" />
+										Value="{Binding OrderedSequenceStop, UpdateSourceTrigger=LostFocus}" KeyDown="TextBox_KeyDown"/>
 									<tk:IntegerUpDown Grid.Row="2" Grid.Column="1" Width="75" VerticalAlignment="Center"
 										Increment="{Binding ElementName=WavelengthSlider, Path=SmallChange}"
 										Minimum="{Binding WavelengthRange, Converter={StaticResource IntNegatingConverter}}"
 										Maximum="{Binding WavelengthRange}"
-										Value="{Binding OrderedSequenceStep}"/>
+										Value="{Binding OrderedSequenceStep}" KeyDown="TextBox_KeyDown"/>
 									<tk:IntegerUpDown Grid.Row="3" Grid.Column="1" Width="75" VerticalAlignment="Center"
 										Increment="1" Minimum="0" Maximum="10000" Value="{Binding OrderedSequenceDwell}"
-										ClipValueToMinMax="True"/>
+										ClipValueToMinMax="True" KeyDown="TextBox_KeyDown"/>
 								</Grid>
 							</DockPanel>
 							<Separator DockPanel.Dock="Left" Width="2" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}"/>
