Made arbitrary sequence items default to the last entered dwell time and the current wavelength.

--- a/src/LCTFCommander/MainWindow.xaml
+++ b/src/LCTFCommander/MainWindow.xaml
@@ -187,6 +187,7 @@
 									</DataGrid.Columns>
 									<DataGrid.ContextMenu>
 										<ContextMenu>
+											<MenuItem Header="Delete" Click="Context_Delete"/>
 											<MenuItem Header="Insert Above" Click="Context_InsertAbove"/>
 											<MenuItem Header="Insert Below" Click="Context_InsertBelow"/>
 										</ContextMenu>
